--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,387 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: black;
+  color: white;
+  transition: 400ms all;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+  height: 70px;
+  padding: 0 30px;
+  transition: all 500ms ease-in;
+}
+
+.nav--bg {
+  background-color: black;
+}
+
+.row-component {
+  margin-left: 20px;
+}
+
+.row__posters {
+  display: flex;
+  overflow-y: hidden;
+  overflow-x: scroll;
+}
+
+.row__posters::-webkit-scrollbar {
+  display: none;
+}
+
+.row__poster {
+  padding: 20px 10px;
+  transition: 500ms;
+}
+
+.row__poster:hover {
+  transform: scale(1.08);
+}
+
+.banner {
+  height: 500px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.banner__content {
+  margin-left: 50px;
+}
+
+.banner__content h1 {
+  font-size: 5rem;
+}
+
+.banner__description {
+  max-width: 600px;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  font-weight: 600;
+}
+
+.banner__buttons button {
+  margin-right: 20px;
+  padding: 10px 20px;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: transparent;
+  border: none !important;
+  outline: none !important;
+  color: white;
+  background-color: rgb(51, 51, 51, 0.5);
+}
+
+.banner__buttons button:hover {
+  color: black;
+  background-color: white;
+  transition: 500ms all;
+}
+
+.banner--fadebottom {
+  position: absolute;
+  bottom: 0;
+  height: 10rem;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgb(37, 37, 37, 0.61),
+    #000
+  );
+  width: 100%;
+}
+
+.banner--fadeup {
+  position: absolute;
+  top: 0;
+  height: 10rem;
+  background-image: linear-gradient(
+    0deg,
+    transparent,
+    rgb(37, 37, 37, 0.81),
+    #000
+  );
+  width: 100%;
+}
+
+.home {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/313d8f80-3110-4e84-a246-22059403155e/1be32fad-7e8d-4f6d-8362-5a25222d157e/IN-en-20201214-popsignuptwoweeks-perspective_alpha_website_small.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.home__content {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home__content h1 {
+  font-size: 3.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.home__content p {
+  font-size: 1.75rem;
+  font-weight: 600;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.getStarted p {
+  font-size: 1.2rem;
+  margin: 10px 0px;
+}
+
+.getStarted__email {
+  width: 65%;
+  padding: 20px 10px;
+  font-size: 1rem;
+  border: none;
+  outline: none;
+}
+
+.getStarted__button {
+  width: 30%;
+  max-height: 100%;
+  padding: 20px 10px;
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: red;
+  border: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.getStarted_input {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.HomeCard {
+  max-width: 100%;
+  padding: 50px 100px;
+}
+
+.HomeCard__content {
+  width: 100%;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.HomeCard:nth-child(odd) .HomeCard__content {
+  flex-direction: row-reverse;
+}
+
+.HomeCard__content__info h1 {
+  font-size: 3rem;
+}
+
+.HomeCard__content__info p {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-top: 20px;
+  max-width: 80%;
+}
+
+.HomeCard__content__image {
+  width: 50%;
+  position: relative;
+  z-index: 2;
+}
+
+.HomeCard__content__video {
+  width: 100%;
+  height: 100%;
+  max-width: 73%;
+  max-height: 54%;
+  position: absolute;
+  top: 21%;
+  left: 13%;
+  z-index: -1;
+}
+
+.HomeCard__content__video__btm {
+  width: 100%;
+  height: 100%;
+  max-width: 65%;
+  max-height: 48%;
+  position: absolute;
+  top: 10%;
+  left: 17%;
+  z-index: -1;
+}
+
+.HomeCard__content img {
+  width: 100%;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+}
+
+.Questions {
+  max-width: 100%;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+.Questions h1 {
+  margin-bottom: 2rem;
+}
+
+.question__card {
+  width: 60%;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(71, 71, 71);
+  color: white;
+  font-size: 1.75rem;
+  border: none;
+  outline: none;
+  margin: 10px auto;
+}
+
+.question__card:hover {
+  cursor: pointer;
+}
+
+.question__card__content {
+  width: 60%;
+  max-width: 60%;
+  background-color: rgb(71, 71, 71);
+  margin: auto;
+  text-align: left;
+  transition: 1s all;
+}
+
+.question__card__content p {
+  padding: 2rem;
+}
+
+.open {
+  height: max-content;
+  max-height: 1200px;
+  transition: 1s all;
+}
+
+.closed {
+  height: 0;
+  overflow: hidden;
+  transition: 1s all;
+}
+
+.obtn {
+  transform: rotate(45deg);
+  transition: 500ms all;
+  font-size: 2rem;
+}
+
+.cbtn {
+  transition: 500ms all;
+  font-size: 2rem;
+}
+
+@media only screen and (max-width: 800px) {
+  .home__content h1 {
+    font-size: 2.5rem;
   }
-  to {
-    transform: rotate(360deg);
+  .home__content p {
+    font-size: 1.25rem;
+    font-weight: 600;
+  }
+
+  .getStarted p {
+    font-size: 1rem;
+    margin: 10px 0px;
+  }
+  .getStarted_input {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .getStarted__button {
+    margin-top: 20px;
+    width: 200px;
+  }
+  .HomeCard__content {
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  .HomeCard__content__info h1 {
+    font-size: 2rem;
+  }
+
+  .HomeCard__content__info p {
+    font-size: 1rem;
+    max-width: 100%;
+  }
+  .HomeCard {
+    max-width: 100%;
+    padding: 50px;
+  }
+  .HomeCard__content__image {
+    width: 80%;
+  }
+  .HomeCard:nth-child(odd) .HomeCard__content {
+    flex-direction: column;
+  }
+  .question__card {
+    width: 80%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(71, 71, 71);
+    color: white;
+    font-size: 1.25rem;
+    border: none;
+    outline: none;
+    margin: 10px auto;
+  }
+
+  .question__card:hover {
+    cursor: pointer;
+  }
+
+  .question__card__content {
+    width: 80%;
+    max-width: 80%;
+    background-color: rgb(71, 71, 71);
+    margin: auto;
+    text-align: left;
+    font-size: 1rem;
+    transition: 1s all;
+  }
+  .question__card__content p {
+    padding: 1rem;
+  }
+  .Questions h1 {
+    font-size: 2rem;
   }
 }
