--- a/src/App.css
+++ b/src/App.css
@@ -84,12 +84,12 @@ body {
 }
 
 .banner__content h1 {
-  font-size: 5rem;
+  font-size: 4rem;
 }
 
 .banner__description {
   max-width: 600px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-top: 1rem;
   font-weight: 600;
 }
@@ -145,6 +145,14 @@ body {
   background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/313d8f80-3110-4e84-a246-22059403155e/1be32fad-7e8d-4f6d-8362-5a25222d157e/IN-en-20201214-popsignuptwoweeks-perspective_alpha_website_small.jpg");
   background-size: cover;
   background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.home__footer {
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -282,7 +290,7 @@ video {
   font-size: 1.75rem;
   border: none;
   outline: none;
-  margin: 10px auto;
+  margin: 5px auto;
 }
 
 .question__card:hover {
@@ -300,6 +308,7 @@ video {
 
 .question__card__content p {
   padding: 2rem;
+  transition: 1s all ease-in;
 }
 
 .open {
@@ -460,5 +469,11 @@ video {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+  }
+  .banner__content h1 {
+    font-size: 2.5em;
+  }
+  .banner__content {
+    margin-left: 30px;
   }
 }
