--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ body {
   background-color: black;
   color: white;
   transition: 400ms all;
+  padding-bottom: 50px;
 }
 
 .navbar {
@@ -25,7 +26,6 @@ body {
   align-items: center;
   justify-content: center;
   display: flex;
-  margin-top: 20px;
   margin-left: 30px;
 }
 
@@ -47,6 +47,24 @@ body {
 
 .nav--bg {
   background-color: black;
+}
+
+.navlinks {
+  display: flex;
+  align-items: center;
+}
+
+.navlinks__items {
+  margin-left: 25px;
+  font-weight: bold;
+  font-size: 1rem;
+  color: rgb(209, 209, 209);
+  outline: none;
+  text-decoration: none;
+}
+
+.navlinks__items:hover {
+  color: white;
 }
 
 .row-component {
@@ -194,6 +212,7 @@ body {
   background-color: red;
   border: none;
   color: white;
+  text-decoration: none;
 }
 
 .getStarted_input {
