--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
   background-color: black;
   color: white;
   transition: 400ms all;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
 }
 
 .navbar {
@@ -97,7 +97,7 @@ body {
 
 .row__overlay {
   position: absolute;
-  opacity: 0;
+  visibility: hidden;
   color: white;
   outline: none;
   text-decoration: none;
@@ -105,7 +105,7 @@ body {
   cursor: pointer;
   font-size: 1rem;
   font-weight: bold;
-  transition: 500ms;
+  transition: 0.05s all;
   padding-top: 30px;
   position: absolute;
   z-index: 10;
@@ -122,12 +122,12 @@ body {
   );
 }
 
-.row__image:hover .row__overlay {
-  opacity: 100%;
+.row__image:hover > .row__poster {
+  transform: scale(1.08);
 }
 
-.row__image:hover .row__poster {
-  transform: scale(1.08);
+.row__image:hover > .row__overlay {
+  visibility: visible;
 }
 
 .added {
@@ -433,9 +433,33 @@ video {
   margin-left: 10px;
 }
 
+.footer {
+  text-align: center;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 20px;
+  background: none;
+  background-color: none;
+}
+
+.footer__link {
+  text-decoration: none;
+}
+
 .signin__form__member {
   display: flex;
   color: gray;
+}
+
+.empty__list {
+  width: 100%;
+  height: 85vh;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 @media only screen and (max-width: 800px) {
@@ -447,9 +471,13 @@ video {
     font-weight: 600;
   }
 
+  .navlinks__items {
+    display: none;
+  }
+
   .getStarted p {
     font-size: 1rem;
-    margin: 10px 0px;
+    margin: 10px 20px;
   }
   .getStarted_input {
     margin-top: 10px;
@@ -489,7 +517,7 @@ video {
     flex-direction: column;
   }
   .question__card {
-    width: 80%;
+    width: 90%;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -507,8 +535,8 @@ video {
   }
 
   .question__card__content {
-    width: 80%;
-    max-width: 80%;
+    width: 90%;
+    max-width: 90%;
     background-color: rgb(71, 71, 71);
     margin: auto;
     text-align: left;
